public/styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");

html {
    scroll-behavior: smooth;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Inter", sans-serif;
}

body {
    background-color: #339653;
}

body::-webkit-scrollbar {
    display: none;
}

#app {
    display: flex;
    width: 500vw;
}

section {
    height: 100vh;
    width: 100vw;
    text-align: center;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

section:first-of-type {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.tooltip {
    position: absolute;
    display: block;
    text-align: left;
    width: 250px;
    font-family: "Inter";
    background-color: #fff;
    color: #000;
    padding: 0.5em 1em;
    border-radius: 5px;
    visibility: hidden;
}

.doFadeIn {
    animation: fadeIn 1.5s ease;
    animation-delay: .2s;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
        transform: translateY(-10em);
    }

    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

